# proventl-website

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  compose.prod.yml  compose.yml  index.html  main.ipynb  pyproject.toml  skills-lock.json
.github/workflows/: backend-ci-smoke.yml
apps/api/: Dockerfile  Dockerfile.prod  README.md
apps/api/src/proventl_api/: __init__.py  app.py  embeddings.py  model.py  rate_limit.py  schemas.py
apps/api/tests/: test_backend_ci_smoke_contract.py  test_backend_config.py  test_cache.py  test_embedding_artifacts.py  test_liveness.py  test_model_artifact.py  test_prediction_api.py  test_rate_limiting.py  test_target_registry.py  test_target_search.py  test_uniprot_client.py
apps/web/: Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  routes.test.ts  routes.ts  styles.css
apps/web/src/api/: predictions.test.ts  predictions.ts  targets.test.ts  targets.ts
apps/web/src/components/: AppShell.tsx
apps/web/src/pages/: CitationPage.tsx  DocsPage.tsx  HomePage.tsx  MethodologyPage.tsx  (+1 more)
data_testing/: data uji viper.csv
deploy/: .env.production.example  Caddyfile  Dockerfile.caddy  README.md
docs/overview/: overview.md
docs/tailwind-reference/: tailwind-reference.jsx
docs/ui-reference/: proventl-ipb.html
docs/upstream-reference/: README.md
model/data_testing/: Pep_Ular_ProtT5.csv  data_protein_kanker_uniprot.csv
scripts/: backend_ci_smoke.py  backend_ci_smoke.sh  refresh_target_metadata.py
(+39 files in other folders)
