[project]
name = "proventl-website"
version = "0.1.0"
description = "ProVenTL website and internal backend"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.124.0",
  "httpx>=0.28.0",
  "tensorflow>=2.21.0",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/api/src"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
